force-app/main/default/objects/Tecsys_Asset__c/Tecsys_Asset__c.object-meta.xml
<CustomObject>
    <label>Tecsys Asset</label>
    <nameField>
        <label>Tecsys Asset</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tecsys Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>