force-app/main/default/objects/Tecsys_Asset__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <label>AssetId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>