force-app/main/default/objects/Tecsys_Asset__c/fields/AssetTag__c.field-meta.xml
<CustomField>
    <fullName>AssetTag__c</fullName>
    <label>AssetTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>