force-app/main/default/objects/Tecsys_Asset__c/fields/AssetTrackingId__c.field-meta.xml
<CustomField>
    <fullName>AssetTrackingId__c</fullName>
    <label>AssetTrackingId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>