force-app/main/default/objects/Tecsys_Asset__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>AssetType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>