force-app/main/default/objects/Tecsys_Asset__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HP COMPAQ</fullName>
            </value>
            <value>
                <fullName>LOGITECH</fullName>
            </value>
            <value>
                <fullName>MOTOROLA</fullName>
            </value>
            <value>
                <fullName>APPLE</fullName>
            </value>
            <value>
                <fullName>MICROSOFT</fullName>
            </value>
            <value>
                <fullName>IMATION</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>ADOBE</fullName>
            </value>
            <value>
                <fullName>ASUS</fullName>
            </value>
            <value>
                <fullName>DELL</fullName>
            </value>
            <value>
                <fullName>SAMSUNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>