force-app/main/default/objects/Tecsys_Asset__c/fields/ItemNum__c.field-meta.xml
<CustomField>
    <fullName>ItemNum__c</fullName>
    <label>ItemNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>