force-app/main/default/objects/Tecsys_Asset__c/fields/PhoneNum__c.field-meta.xml
<CustomField>
    <fullName>PhoneNum__c</fullName>
    <label>PhoneNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>