force-app/main/default/objects/Tecsys_Asset__c/fields/PONum__c.field-meta.xml
<CustomField>
    <fullName>PONum__c</fullName>
    <label>PONum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>