force-app/main/default/objects/Tecsys_Asset__c/fields/SerialNumOrIMEI__c.field-meta.xml
<CustomField>
    <fullName>SerialNumOrIMEI__c</fullName>
    <label>SerialNumOrIMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>