force-app/main/default/objects/Tecsys_Asset__c/fields/SimOrCcid__c.field-meta.xml
<CustomField>
    <fullName>SimOrCcid__c</fullName>
    <label>SimOrCcid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>