force-app/main/default/objects/Tecsys_Asset__c/fields/StatiicIp__c.field-meta.xml
<CustomField>
    <fullName>StatiicIp__c</fullName>
    <label>StatiicIp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>