force-app/main/default/objects/Tecsys_Asset__c/fields/TEXT__c.field-meta.xml
<CustomField>
    <fullName>TEXT__c</fullName>
    <label>TEXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>