force-app/main/default/objects/Tecsys_Asset__c/fields/UserName_Email_SF__c.field-meta.xml
<CustomField>
    <fullName>UserName_Email_SF__c</fullName>
    <label>UserName Email SF</label>
    <type>Email</type>
</CustomField>