force-app/main/default/objects/Tecsys_Asset__c/fields/VALUE__c.field-meta.xml
<CustomField>
    <fullName>VALUE__c</fullName>
    <label>VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>