force-app/main/default/objects/Tecsys_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssetTrackingId__c</columns>
    <columns>AssetId__c</columns>
    <columns>AssetType__c</columns>
    <columns>ItemNum__c</columns>
    <columns>Brand__c</columns>
    <columns>Status__c</columns>
    <columns>Model__c</columns>
    <columns>AssetTag__c</columns>
    <columns>PONum__c</columns>
    <columns>UserName__c</columns>
    <columns>UserName_Email_SF__c</columns>
    <columns>TEXT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>